test/files/neg/t12919-3cross.check
t12919-3cross.scala:24: error: could not find implicit value for parameter ord: Ordering[a.A]
    def f(xs: List[a.A]) = xs.sorted // not found
                              ^
1 error
